Changelog for mk-heartbeat:

   * Removed --quiet option.
   * Added --print-master-server-id option (issue 1292).
   * Changed default heartbeat table structure (issue 1292).
   * The tool crashed if only --stop was specified.

2010-06-08: version 1.0.22

   * Connections did not preserve server SQL modes (issue 801).

2010-04-01: version 1.0.21

   * Added ability to specify DSN on the command line.
   * Added DSN OPTIONS section to POD (issue 55).

2010-01-06: version 1.0.20

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-10-30: version 1.0.19

   * Removed the --time long option.  Use --run-time instead.
   * --set-vars did not work (issue 597).

2009-09-30: version 1.0.18

   * Added --pid (issue 391).

2009-08-31: version 1.0.17

   * --ask-pass did not work.

2009-07-31: version 1.0.16

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).
   * Added --recursion-method option (issue 181).

2009-06-30: version 1.0.15

   * Updates to shared code.

2009-06-02: version 1.0.14

   * Script did not die if --pid file already existed (issue 383).
   * Sorted options alphabetically in the POD.
   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --dbidriver long option.  Use --dbi-driver instead.
   * Removed the --setvars long option.  Use --set-vars instead.
   * Removed the -i short option.  Use --interval instead.
   * Removed the -r short option.  Use --replace instead.
   * Removed the -k short option.  Use --skew instead.
   * Removed the -t short option.  Use --table instead.
   * Removed the -m short option.  Use --time instead.
   * Added port to --check output (issue 352).
   * Added --create-table (issue 353).
   * Added the --config option for issue 231.
   * Added the --log option for issue 241.
   * Converted script to runnable module (issue 315).
   * Added the --help and --verbose options for issue 318.

2009-03-31: version 1.0.13
